--- a/.htaccess
+++ b/.htaccess
@@ -19,6 +19,8 @@ ErrorDocument 500 /_error.php?e=500
 ErrorDocument 502 /_error.php?e=502
 ErrorDocument 503 /_error.php?e=503
 ErrorDocument 504 /_error.php?e=504
+#In case you are using nginx add this line below
+# error_page 400 401 402 403 404 500 502 503 504 /_error.php?e=$status;
 #Alternate Index
 DirectoryIndex index.php
 #Misc
