--- a/nginx.server.common.conf
+++ b/nginx.server.common.conf
@@ -1,3 +1,8 @@
+### File: nginx.conf
+### Desc: Configures URL rewriting. Check out: https://github.com/byuwur/nginx-configurations
+### Deps: none
+### Copyright (c) 2023 Andrés Trujillo [Mateus] byUwUr
+
 listen 80;
 charset utf-8;
 index home.php;
